<resources>
    <string name="app_name">IM</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="now_login">立即登录</string>
    <string name="now_register">立即注册</string>
    <string name="settings">设置</string>
    <string name="version_update">版本更新</string>
    <string name="g_ok">确定</string>
    <string name="g_next_step">下一步</string>
    <string name="g_submit">提交</string>
    <string name="g_save">保存</string>
    <string name="forget_password"><u>找回密码</u></string>
    <string name="find_password">找回密码</string>
    <string name="change_password">修改密码</string>
    <string name="get_net_is_wrong">网络错误</string>
    <string name="filter_name">[\u4e00-\u9fa5]</string>
    <string name="txt_error_permission">使用该功能需要以下权限和服务：\n%s\n请从设置中开启</string>
    <string name="txt_lack_permission">使用该功能需要以下权限：\n%s\n请从设置中开启</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yhfwxy"><u>《用户服务协议》</u></string>
    <string name="ysbhzy"><u>《隐私保护指引》</u></string>

    <string name="action_settings">Settings</string>
    <string name="action_addbuddy">Add Buddy</string>
    <string name="action_call">Call</string>
    <string name="buddy">好友</string>
    <string name="group">群组</string>
    <string name="share">Share</string>
    <string name="del">删除</string>
    <string name="selectall">全选</string>
    <string name="unselectall">取消全选</string>
    <string name="g_cancel">取消</string>
    <string name="g_operation">操作</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>


    <string name="netcannotwork">您的网络异常，请检查您的网络配置。</string>
    <string name="dialog_edit_hint">我要吐槽...</string>
    <string name="dialog_apply">提交</string>

    <string name="g_my_friend">新的好友</string>
    <string name="g_group_chat">群聊</string>
    <string name="g_vcard">邮件通讯录</string>
    <string name="g_create_group_chat">发起群聊</string>
    <string name="g_select_group_chat">选择群聊</string>
    <string name="g_select_new_group_admin">选择新群主</string>
    <string name="g_group_admin">群管理</string>
    <string name="g_name">姓名</string>
    <string name="g_tx">tx</string>
    <string name="g_send">发送</string>
    <string name="m_make_photo">拍照</string>
    <string name="m_pic">图片</string>
    <string name="m_make_micro_video">小视频</string>
    <string name="m_document">文档</string>
    <string name="m_call">语音聊天</string>
    <string name="m_secret">绝密</string>
    <string name="m_email">发邮件</string>
    <string name="m_press_speak">按住说话</string>
    <string name="m_press_video">按住拍</string>
    <string name="m_loosen_end">松手发送</string>
    <string name="m_send_cancel">取消发送</string>
    <string name="m_loosen_cancel">松开，取消发送</string>
    <string name="m_finger_slide_up">上滑，取消发送</string>
    <string name="m_voice_too_short">录音时间太短</string>
    <string name="m_video_too_short">拍摄时间太短</string>
    <string name="m_return_str">返回</string>
    <string name="g_msg">消息</string>
    <string name="g_dial">拨号</string>
    <string name="g_mine_label">个人中心</string>
    <string name="g_contacts_label">通讯录</string>
    <string name="g_call_history_detail_label">通话详情</string>
    <string name="g_call_history_label">通话记录</string>
    <string name="g_friend_label">好友</string>
    <string name="g_my">我</string>
    <string name="g_app">应用</string>
    <string name="g_mobile_contact">查看手机通讯录</string>
    <string name="g_modify_password">修改密码</string>
    <string name="g_reset_password">重置密码</string>
    <string name="s_input_verify_info">请输入您的验证信息</string>
    <string name="success">"success"</string>
    <string name="uploadUrl">"uploadUrl"</string>
    <string name="localPath">"localPath"</string>
    <string name="g_search_contacts">搜索联系人</string>
    <string name="g_search">搜索</string>
    <string name="g_confirm">确定</string>
    <string name="g_resend">重发</string>
    <string name="g_clear">清空</string>
    <string name="g_select">选择</string>
    <string name="t_update_time">更新时间:   </string>
    <string name="g_no_more">没有更多了</string>
    <string name="g_load_more_fail_try">加载更多出错啦，请重试！</string>
    <string name="g_fail_try">出错啦，请重试！</string>
    <string name="func_developing">功能开发中</string>
    <string name="g_transmit">转发给</string>
    <string name="g_choose_contact">选择联系人</string>
    <string name="g_choose_group">选择群组</string>

    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TT -->
    <string name="message_image_desc">Message Image</string>
    <string name="tip_for_voice_forward">按住 说话</string>
    <string name="release_to_send_voice">松开 结束</string>
    <string name="photo_pop_pick_photo">从相册选择</string>
    <string name="photo_pop_take_photo">拍照</string>
    <string name="no_gallery">没有找到相册</string>
    <string name="no_sdcard">没有SD卡</string>
    <string name="no_available_dir">没用找到存储目录</string>
    <string name="disconnected_by_server">"服务器已断开连接！"</string>
    <string name="link_is_connecting">正在建立连接,请稍后...</string>
    <string name="message_null">不能发送空内容哦！</string>
    <string name="take_photo_description">take photo</string>
    <string name="pick_photo_description">pick photo</string>
    <string name="network_has_disconnected">网络已经断开</string>
    <string name="message_send_failed">请检查网络</string>
    <string name="network_has_connected">网络已正常</string>
    <string name="image_download_failed">下载文件失败</string>
    <string name="send_good_url_btn_text">发送链接</string>
    <string name="loadding_target_info">正在获取对方信息...</string>
    <string name="audio_recorded_so_short">录音时间太短，请重新录制</string>
    <string name="take_photo_btn_text">照片</string>
    <string name="take_camera_btn_text">拍照</string>
    <string name="kick_tip">您已经被踢下线</string>
    <string name="goods_detail_title">我正在看:</string>
    <string name="goods_now_price_prefix">￥</string>
    <string name="goods_old_price_prefix">￥</string>
    <string name="history_divider_text">以上是历史信息</string>
    <string name="send_link">发送链接</string>
    <string name="write_audio_file_failed">录音文件写入失败</string>
    <string name="need_choose_images">请选择图片～</string>
    <string name="image_cannot_found">图片路径不存在，请选择其它图片！</string>
    <string name="not_found_album">没有找到可用的相册！</string>
    <string name="loading">加载中&#8230;</string>
    <string name="refresh_over">刷新完成</string>
    <string name="refresh">刷新</string>
    <string name="notfound_audio_file">该语音文件已丢失</string>
    <string name="audio_in_speeker">已经为您切换到扬声器模式</string>
    <string name="audio_in_call">已经为您切换到听筒模式</string>
    <string name="unavailable_image_file">该文件已损坏</string>
    <string name="block_chat">不能对话</string>
    <string name="unavailable_server">服务器开小差，请稍后重试～</string>
    <string name="i_know">我知道了</string>
    <string name="kick_off">该账号在其他设备登陆，您已被迫下线!</string>
    <string name="reconnect">重连</string>
    <string name="request_custom_service_failed">请求客服失败</string>
    <string name="invalid_detail_url">无效的详情链接,不能跳转哦～</string>
    <string name="invalid_order_url">无效的订单链接,不能跳转哦～</string>
    <string name="no_group_member">你可能已经不在该群中了!</string>
    <string name="default_emo">默认表情</string>
    <string name="yaya_emo">牙牙表情</string>
    <string name="call">呼叫</string>
    <string name="save_image">保存图片到手机</string>
    <string name="im_service_disconnected">无法连接到后台服务</string>

    <string name="downloading">正在下载更新</string>
    <string name="wait_moment">请稍候</string>
    <string name="connect_login_server_failed">无法连接到登陆服务器, 请检查你的网络或稍后重试</string>
    <string name="login_error_fetch_login_server_addrs_failed">获取登陆服务器地址失败, 请检查你的网络或稍后重试</string>
    <string name="req_msg_server_addrs_failed">获取消息服务器地址失败, 请检查你的网络或稍后重试</string>
    <string name="connect_msg_server_failed">无法连接到消息服务器, 请检查你的网络或稍后重试</string>
    <string name="login_msg_server_failed">消息服务器断开连接，请检查你的网络或稍后重试</string>
    <string name="login_error_general_failed">帐号或密码错误，请重新填写</string>
    <string name="login_error_unexpected">登陆失败, 请检查你的网络或稍后重试</string>
    <string name="no_network">网络连接不可用,点击重新连接...</string>
    <string name="no_network_toast">网络连接不可用</string>
    <string name="no_chat">暂无会话</string>
    <string name="no_search_result">搜索结果为空</string>
    <string name="disconnect_kickout">账号在其他端登陆,点击重登</string>
    <string name="pc_status_notify">PC端已登陆,点击踢出</string>
    <string name="kick_pc_failed">踢出PC端失败</string>
    <string name="no_network_notification">网络连接不可用, 请检查你的网络或稍后重试</string>

    <string name="req_msg_failed">操作失败，请稍后重试</string>
    <string name="msg_cnt_unit">条</string>
    <string name="setting_notificaton_name">消息通知设置</string>
    <string name="no_disturb">接收但屏蔽通知</string>
    <string name="top_message">置顶聊天</string>
    <string name="cancel_top_message">取消置顶</string>
    <string name="forbid_message">屏蔽会话</string>
    <string name="cancel_forbid_message">取消屏蔽</string>
    <string name="forbid_group_message">免打扰</string>
    <string name="cancel_forbid_group_message">取消免打扰</string>
    <string name="new_msg_notify_got_sound">声音</string>
    <string name="new_msg_notify_got_vibration">震动</string>
    <string name="image_downloading_setting_name">图片下载设置</string>
    <string name="save_traffic">省流量模式</string>
    <string name="exit_teamtalk">退出TeamTalk</string>
    <string name="exit_teamtalk_tip">你确定退出TeamTalk?</string>
    <string name="clear_cache_tip">你确定清理图片缓存?</string>
    <string name="confirm_dial">拨打电话:%s</string>
    <string name="confirm_send_email">发送邮件:%s</string>
    <string name="setting_page_name">设置</string>
    <string name="check_profile">查看资料</string>
    <string name="delete_session">删除会话</string>
    <string name="start_session">开始聊天</string>
    <string name="call_phone">拨打电话</string>
    <string name="empty_phone_no">号码为空</string>
    <string name="fixed_group_name">群</string>
    <string name="contact">联系人</string>
    <string name="fixed_group_or_temp_group">群或讨论组</string>
    <string name="department">部门</string>
    <string name="create_temp_group_dialog_title">讨论组名字</string>
    <string name="tt_ok">确定</string>
    <string name="tt_cancel">取消</string>
    <string name="empty_prompt">名字不能为空</string>
    <string name="setting_version">版本: 20150320</string>
    <string name="sex_female_name">女</string>
    <string name="sex_male_name">男</string>
    <string name="error_code_name">错误代码</string>

    <string name="error_group_info">不合法群组选择信息</string>
    <string name="select_group_member_empty">请先选择群组成员</string>
    <string name="create_temp_group_failed">请求创建失败,请检查网络</string>
    <string name="change_temp_group_failed">修改群失败</string>
    <string name="change_group_member_success">修改群成员成功</string>
    <string name="change_group_member_failed">修改群成员失败</string>
</resources>